--- a/references.bib
+++ b/references.bib
@@ -18,26 +18,24 @@ annotate = "This is a rather short paper, but it seemed very interesting, as it 
 	  annotate = "The authors introduce a new class of backdoors for propositional logic formulae which they call Recursive Backdoors. They introduce the parameter recursive backdoor treewidth and show that SAT is fixed-parameter tractable by said parameter."
 }
 
-@Inbook{Cygan2015,
-author="Cygan, Marek
-and Fomin, Fedor V.
-and Kowalik, {\L}ukasz
-and Lokshtanov, Daniel
-and Marx, D{\'a}niel
-and Pilipczuk, Marcin
-and Pilipczuk, Micha{\l}
-and Saurabh, Saket",
-title="Lower Bounds Based on the Exponential-Time Hypothesis",
-bookTitle="Parameterized Algorithms",
-year="2015",
-publisher="Springer International Publishing",
-address="Cham",
-pages="467--521",
-abstract="The Exponential Time Hypothesis (ETH) is a conjecture stating that, roughly speaking, n-variable 3-SAT cannot be solved in time 2o(n). In this chapter, we prove lower bounds based on ETH for the time needed to solve various problems. In many cases, these lower bounds match (up to small factors) the running time of the best known algorithms for the problem.",
-isbn="978-3-319-21275-3",
-doi="10.1007/978-3-319-21275-3_14",
-url="https://doi.org/10.1007/978-3-319-21275-3_14",
-annotate = "This chapter of the book Parameterized Algorithms discusses the connection of fixed-parameter tractability and the Exponential-Time Hypothesis, which is the assumption that 3-SAT cannot be solved in subexponential time. Using this hypothesis, lower bounds for the runtime of various problems that are connected to 3-SAT can be shown, which also includes fixed-parameter intractibility results."
+@book{Cygan2015,
+  author    = {Marek Cygan and
+               Fedor V. Fomin and
+               Lukasz Kowalik and
+               Daniel Lokshtanov and
+               D{\'{a}}niel Marx and
+               Marcin Pilipczuk and
+               Michal Pilipczuk and
+               Saket Saurabh},
+  title     = {Parameterized Algorithms},
+  publisher = {Springer},
+  year      = {2015},
+  url       = {https://doi.org/10.1007/978-3-319-21275-3},
+  doi       = {10.1007/978-3-319-21275-3},
+  isbn      = {978-3-319-21274-6},
+  timestamp = {Sun, 25 Oct 2020 22:32:21 +0100},
+  biburl    = {https://dblp.org/rec/books/sp/CyganFKLMPPS15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @Inbook{Gaspers2012,
@@ -58,4 +56,19 @@ isbn="978-3-642-30891-8",
 doi="10.1007/978-3-642-30891-8_15",
 url="https://doi.org/10.1007/978-3-642-30891-8_15",
 annotate = "This paper is a survey and comparison of different backdoor sets for SAT, which can be used to exploit hidden structures in SAT-instances and lead to tractability of the problem. The authors also give complexity results of detecting such backdoor sets."
+}
+
+@book{downeyFellows,
+  author    = {Rodney G. Downey and
+               Michael R. Fellows},
+  title     = {Parameterized Complexity},
+  series    = {Monographs in Computer Science},
+  publisher = {Springer},
+  year      = {1999},
+  url       = {https://doi.org/10.1007/978-1-4612-0515-9},
+  doi       = {10.1007/978-1-4612-0515-9},
+  isbn      = {978-1-4612-6798-0},
+  timestamp = {Fri, 17 Jul 2020 16:12:37 +0200},
+  biburl    = {https://dblp.org/rec/series/mcs/DowneyF99.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
